EVerything updated as it should be

--- a/starter_files/001_equal_weight_S&P_500.ipynb
+++ b/starter_files/001_equal_weight_S&P_500.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,139 +506,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>Stock Price</th>\n",
-       "      <th>Market Capitalization</th>\n",
-       "      <th>Number of Shares to Buy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>120.85</td>\n",
-       "      <td>35696167605</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AAL</td>\n",
-       "      <td>15.05</td>\n",
-       "      <td>9833104662</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAP</td>\n",
-       "      <td>69.46</td>\n",
-       "      <td>4128969960</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>174</td>\n",
-       "      <td>2720356368000</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABBV</td>\n",
-       "      <td>150.02</td>\n",
-       "      <td>264792302934</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>CINF</td>\n",
-       "      <td>105.13</td>\n",
-       "      <td>16490288311</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>CL</td>\n",
-       "      <td>74</td>\n",
-       "      <td>61175173146</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>CLX</td>\n",
-       "      <td>154.17</td>\n",
-       "      <td>19090253341</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>CMA</td>\n",
-       "      <td>47.68</td>\n",
-       "      <td>6283104617</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>CMCSA</td>\n",
-       "      <td>46.24</td>\n",
-       "      <td>190309438506</td>\n",
-       "      <td>N/A</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Ticker Stock Price Market Capitalization Number of Shares to Buy\n",
-       "0       A      120.85           35696167605                     N/A\n",
-       "1     AAL       15.05            9833104662                     N/A\n",
-       "2     AAP       69.46            4128969960                     N/A\n",
-       "3    AAPL         174         2720356368000                     N/A\n",
-       "4    ABBV      150.02          264792302934                     N/A\n",
-       "..    ...         ...                   ...                     ...\n",
-       "95   CINF      105.13           16490288311                     N/A\n",
-       "96     CL          74           61175173146                     N/A\n",
-       "97    CLX      154.17           19090253341                     N/A\n",
-       "98    CMA       47.68            6283104617                     N/A\n",
-       "99  CMCSA       46.24          190309438506                     N/A\n",
-       "\n",
-       "[100 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'DISCA'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 12\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[39m# print (data.status_code)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[39mfor\u001b[39;00m symbol \u001b[39min\u001b[39;00m symbol_string\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m      6\u001b[0m         final_dataframe \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat(\n\u001b[1;32m      7\u001b[0m     [final_dataframe,\n\u001b[1;32m      8\u001b[0m     (\n\u001b[1;32m      9\u001b[0m     pd\u001b[39m.\u001b[39mSeries(\n\u001b[1;32m     10\u001b[0m     [\n\u001b[1;32m     11\u001b[0m         symbol,\n\u001b[0;32m---> 12\u001b[0m         data[symbol][\u001b[39m'\u001b[39m\u001b[39mquote\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mlatestPrice\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     13\u001b[0m         data[symbol][\u001b[39m'\u001b[39m\u001b[39mquote\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mmarketCap\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     14\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mN/A\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     15\u001b[0m     ],\n\u001b[1;32m     16\u001b[0m     index \u001b[39m=\u001b[39m my_columns\n\u001b[1;32m     17\u001b[0m     )\u001b[39m.\u001b[39mto_frame()\u001b[39m.\u001b[39mT\n\u001b[1;32m     18\u001b[0m     )\n\u001b[1;32m     19\u001b[0m     ]\n\u001b[1;32m     20\u001b[0m     , ignore_index \u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     21\u001b[0m )\n\u001b[1;32m     22\u001b[0m final_dataframe\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'DISCA'"
+     ]
     }
    ],
    "source": [
